--- a/kart.html
+++ b/kart.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel ="javascript" href="js/kart.js">
+    <link rel="javascript" type="text/javascript" href="js/kart.js">
     <title>Utesteder i Bergen</title>
 
   </head>
