--- a/konserter.html
+++ b/konserter.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/konserter.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <ul class="navigation">
