--- a/kart.html
+++ b/kart.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="javascript" type="text/javascript" href="js/kart.js">
+    <link rel="javascript" type="text/javascript" href="js/script.js">
     <title>Utesteder i Bergen</title>
 
   </head>
@@ -21,7 +21,7 @@
     <div class="centered"></div>
     <div id="map"></div>
 
-<script src="js/kart.js"></script>
+<script src="js/script.js"></script>
 
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuVLxQGcWI91xujnPjh1NsfEDLK6X-jU&callback=initMap">
