la til toaletter.html og json i js

--- a/toaletter.html
+++ b/toaletter.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-
-
+    <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
+
+    <div id="id01" onload="lastToaletter(toaletter)">
+    </div>
+
+
 
 
   </body>
