--- a/toaletter.html
+++ b/toaletter.html
@@ -5,8 +5,15 @@
   </head>
   <body>
 
-    <div id="id01" onload="lastToaletter(toaletter)">
+    <div id="id01">
     </div>
+    <script>
+    loadJSON('my-file.json',
+         function(data) { console.log(data); },
+         function(xhr) { console.error(xhr); }
+       );
+    </script>
+
 
 
 
