endringer i json og toaletter.html

--- a/toaletter.html
+++ b/toaletter.html
@@ -5,14 +5,8 @@
   </head>
   <body>
 
-    <div id="id01">
+    <div id="toalettListe">
     </div>
-    <script>
-    loadJSON('my-file.json',
-         function(data) { console.log(data); },
-         function(xhr) { console.error(xhr); }
-       );
-    </script>
 
 
 
