--- a/toaletter.html
+++ b/toaletter.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
   </head>
-  <body>
+  <body onload="parseToalett()">
 
     <div id="toalettListe">
     </div>
