--- a/toaletter.html
+++ b/toaletter.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body onload="parseToalett()">
 
     <div id="toalettListe">
     </div>
-
-
-
-
 
   </body>
 </html>
