--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
- <title>Test</title>
+ <title>Forside</title>
  <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/index.css">
  </head>
@@ -14,7 +14,7 @@
 
    <div class="container">
 
-<img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100;">
+<img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
 
   <div id="centered">KONSERTER I BERGEN</div>
 </div>
