<ol> istedenfor <ul>

--- a/toaletter.html
+++ b/toaletter.html
@@ -7,7 +7,9 @@
   </head>
   <body onload="parseToalett()">
 
-    <div id="toalettListe">
+    <div>
+      <ol id="toalettListe">
+      </ol>
     </div>
 
   </body>
