--- a/konserter.html
+++ b/konserter.html
@@ -10,6 +10,7 @@
      <li id="navitem"><a href="index.html">FORSIDE</a></li>
      <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
      <li id="navitem"><a href="kart.html">KART</a></li>
+     <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
 </ul>
 
 <div class="container2">
