--- a/toaletter.html
+++ b/toaletter.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body onload="parseToalett()">
-
+    <ul class="navigation">
+         <li id="navitem"><a href="index.html">FORSIDE</a></li>
+         <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
+         <li id="navitem"><a href="kart.html">KART</a></li>
+         <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
+    </ul>
     <div>
       <ol id="toalettListe">
       </ol>
