--- a/kart.html
+++ b/kart.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Utesteder i Bergen</title>
+    <style>
 
+
+    </style>
   </head>
   <body>
     <ul class="navigation">
