--- a/toaletter.html
+++ b/toaletter.html
@@ -1,21 +1,26 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body onload="parseToalett()">
+
     <ul class="navigation">
          <li id="navitem"><a href="index.html">FORSIDE</a></li>
          <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
          <li id="navitem"><a href="kart.html">KART</a></li>
          <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
     </ul>
-    <div>
-      <ol id="toalettListe">
+
+    <div id="toalettListe">
+      <ol id="toaListe">
       </ol>
     </div>
+
+
+
+
 
   </body>
 </html>
