--- a/konserter.html
+++ b/konserter.html
@@ -3,7 +3,8 @@
 <head>
   <title>Konserter</title>
   <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/konserter.css">
+<link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 <body>
 <ul class="navigation">
