--- a/kart.html
+++ b/kart.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
+<html>
+  <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/kart.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="javascript" type="text/javascript" href="js/script.js">
     <title>Utesteder i Bergen</title>
 
