--- a/toaletter.html
+++ b/toaletter.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/toalett.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
   </head>
   <body onload="parseToalett()">
 
@@ -17,10 +19,5 @@
       <ol id="toaListe">
       </ol>
     </div>
-
-
-
-
-
   </body>
 </html>
