--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
         <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
    </ul>
 
+<nav id="hamburger">
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
+    <ul id="menu">
+      <a href="index.html"><li>FORSIDE</li></a>
+      <a href="konserter.html"><li>KONSERTER</li></a>
+      <a href="kart.html"><li>KART</li></a>
+      <a href="toaletter.html"><li>TOALETTER</li></a>
+    </ul>
+</div>
+</nav>
+
    <div class="container">
 
 <img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
