--- a/kart.html
+++ b/kart.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
-<<<<<<< HEAD
-=======
 <html>
->>>>>>> 04a696a75d44a1658597ee3846dcbfaf3097bc68
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -19,6 +16,22 @@
          <li id="navitem"><a href="kart.html">KART</a></li>
          <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
     </ul>
+
+    <nav id="hamburger">
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <a href="index.html"><li>FORSIDE</li></a>
+          <a href="konserter.html"><li>KONSERTER</li></a>
+          <a href="kart.html"><li>KART</li></a>
+          <a href="toaletter.html"><li>TOALETTER</li></a>
+        </ul>
+    </div>
+    </nav>
+
     <div class="centered">
       <h1>UTESTEDER I BERGEN</h1>
     </div>
