--- a/toaletter.html
+++ b/toaletter.html
@@ -15,6 +15,21 @@
          <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
     </ul>
 
+    <nav id="hamburger">
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <a href="index.html"><li>FORSIDE</li></a>
+          <a href="konserter.html"><li>KONSERTER</li></a>
+          <a href="kart.html"><li>KART</li></a>
+          <a href="toaletter.html"><li>TOALETTER</li></a>
+        </ul>
+    </div>
+    </nav>
+
     <div id="toalettListe">
       <ol id="toaListe">
       </ol>
