--- a/konserter.html
+++ b/konserter.html
@@ -3,14 +3,13 @@
 <head>
   <title>Konserter</title>
   <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="css/konserter.css">
-<link rel="stylesheet" type="text/css" href="css/common.css">
+  <link rel="stylesheet" type="text/css" href="css/common.css">
+  <link rel="stylesheet" type="text/css" href="css/konserter.css">
 </head>
 <body>
 <ul class="navigation">
      <li id="navitem"><a href="index.html">FORSIDE</a></li>
      <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
-     <li id="navitem"><a href="kart.html">KART</a></li>
      <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
 </ul>
 
@@ -23,11 +22,12 @@
     <ul id="menu">
       <a href="index.html"><li>FORSIDE</li></a>
       <a href="konserter.html"><li>KONSERTER</li></a>
-      <a href="kart.html"><li>KART</li></a>
       <a href="toaletter.html"><li>TOALETTER</li></a>
     </ul>
 </div>
 </nav>
+
+<div class="overskrift"><h1>KOMMENDE KONSERTER</h1></div>
 
 <div class="container2">
   <div class="bilder">
