--- a/toaletter.html
+++ b/toaletter.html
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <script type="text/javascript" src="js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/toalett.css">
+    <link rel="stylesheet" type="text/css" href="css/toaletter.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
-  </head>
-  <body onload="parseToalett()">
+    <link rel="javascript" type="text/javascript" href="js/script.js">
+    <title>Toaletter</title>
 
-    <ul class="navigation">
+  </head>
+  <body>
+
+      <ul class="navigation">
          <li id="navitem"><a href="index.html">FORSIDE</a></li>
          <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
-         <li id="navitem"><a href="kart.html">KART</a></li>
          <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
     </ul>
 
@@ -24,15 +26,204 @@
         <ul id="menu">
           <a href="index.html"><li>FORSIDE</li></a>
           <a href="konserter.html"><li>KONSERTER</li></a>
-          <a href="kart.html"><li>KART</li></a>
           <a href="toaletter.html"><li>TOALETTER</li></a>
         </ul>
     </div>
     </nav>
 
-    <div id="toalettListe">
-      <ol id="toaListe">
-      </ol>
-    </div>
-  </body>
+    <div id="map"></div>
+
+    <body onload="parseToalett()">
+      <div id="toalettListe">
+        <ol id="toaListe">
+        </ol>
+      </div>
+
+<script src="js/script.js"></script>
+    <script>
+function initMap() {
+
+  var Bergen = {lat: 60.39299, lng: 5.32415};
+
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 14,
+    center: Bergen,
+    styles: [
+{
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#f5f5f5"
+  }
+]
+},
+{
+"elementType": "labels.icon",
+"stylers": [
+  {
+    "visibility": "off"
+  }
+]
+},
+{
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#616161"
+  }
+]
+},
+{
+"elementType": "labels.text.stroke",
+"stylers": [
+  {
+    "color": "#f5f5f5"
+  }
+]
+},
+{
+"featureType": "administrative.land_parcel",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#bdbdbd"
+  }
+]
+},
+{
+"featureType": "poi",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#eeeeee"
+  }
+]
+},
+{
+"featureType": "poi",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#757575"
+  }
+]
+},
+{
+"featureType": "poi.park",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#e5e5e5"
+  }
+]
+},
+{
+"featureType": "poi.park",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#9e9e9e"
+  }
+]
+},
+{
+"featureType": "road",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#ffffff"
+  }
+]
+},
+{
+"featureType": "road.arterial",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#757575"
+  }
+]
+},
+{
+"featureType": "road.highway",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#dadada"
+  }
+]
+},
+{
+"featureType": "road.highway",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#616161"
+  }
+]
+},
+{
+"featureType": "road.local",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#9e9e9e"
+  }
+]
+},
+{
+"featureType": "transit.line",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#e5e5e5"
+  }
+]
+},
+{
+"featureType": "transit.station",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#eeeeee"
+  }
+]
+},
+{
+"featureType": "water",
+"elementType": "geometry",
+"stylers": [
+  {
+    "color": "#c9c9c9"
+  }
+]
+},
+{
+"featureType": "water",
+"elementType": "labels.text.fill",
+"stylers": [
+  {
+    "color": "#9e9e9e"
+  }
+]
+}
+]
+  });
+  for (var i = 0; i < toaletterJson.length; i++) {
+    var toalettCoordinates = toaletterJson[i];
+    var label = i + 1;
+    var marker = new google.maps.Marker({
+      position: {lat: parseFloat(toaletterJson[i]["latitude"]), lng: parseFloat(toaletterJson[i]["longitude"])},
+      map: map,
+      title: toaletterJson[i]["plassering"],
+      label: label.toString()
+    });
+  }
+}
+
+</script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuVLxQGcWI91xujnPjh1NsfEDLK6X-jU&callback=initMap">
+</script>
+</body>
 </html>
