--- a/toaletter.html
+++ b/toaletter.html
@@ -234,8 +234,8 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuVLxQGcWI91xujnPjh1NsfE
   <form>
     <input type="radio" name="sex" value="Mann" />Mann
     <input type="radio" name="sex" value="Dame" />Dame<br>
-    <input type="checkbox" name="rullestoltilgang" value="rullestoltilgang">rullestoltilgang<br>
-    <input type="checkbox" name="åpen_nå" value="åpen_nå">Åpen nå
+    <input type="checkbox" name="rullestoltilgang" value="rullestoltilgang">Rullestoltilgang<br>
+    <input type="checkbox" name="åpen_nå" value="åpen_nå">Åpen nå<br>
     <input type="checkbox" name="stellerom" value="stellerom">Stellerom<br>
     <input type="checkbox" name="gratis" value="gratis">Gratis<br>
     <input name="åpningstider"  id="åpningstider"  placeholder="Søk åpningstider" /><br>
