--- a/toaletter.html
+++ b/toaletter.html
@@ -232,8 +232,8 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuVLxQGcWI91xujnPjh1NsfE
 
 <div>
   <form>
-    <input type="radio" name="sex" value="Mann" />Mann
-    <input type="radio" name="sex" value="Dame" />Dame<br>
+    <input type="radio" name="kjonn" value="Mann" />Mann
+    <input type="radio" name="kjonn" value="Dame" />Dame<br>
     <input type="checkbox" name="rullestoltilgang" value="rullestoltilgang">Rullestoltilgang<br>
     <input type="checkbox" name="åpen_nå" value="åpen_nå">Åpen nå<br>
     <input type="checkbox" name="stellerom" value="stellerom">Stellerom<br>
