--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!doctype html>
 <html>
- <head>
- <title>Forside</title>
- <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
- </head>
- <body>
-   <ul class="navigation">
-        <li id="navitem"><a href="index.html">FORSIDE</a></li>
-        <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
-        <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
-   </ul>
 
-<nav id="hamburger">
-  <div id="menuToggle">
-    <input type="checkbox" />
-    <span></span>
-    <span></span>
-    <span></span>
-    <ul id="menu">
-      <a href="index.html"><li>FORSIDE</li></a>
-      <a href="konserter.html"><li>KONSERTER</li></a>
-      <a href="toaletter.html"><li>TOALETTER</li></a>
-    </ul>
-</div>
-</nav>
+<head>
+  <title>Forside</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/common.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+</head>
 
-   <div class="container">
+<body>
+  <ul class="navigation">
+    <li id="navitem"><a href="index.html">FORSIDE</a></li>
+    <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
+    <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
+  </ul>
 
-<img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
+  <nav id="hamburger">
+    <div id="menuToggle">
+      <input type="checkbox" />
+      <span></span>
+      <span></span>
+      <span></span>
+      <ul id="menu">
+        <a href="index.html">
+          <li>FORSIDE</li>
+        </a>
+        <a href="konserter.html">
+          <li>KONSERTER</li>
+        </a>
+        <a href="toaletter.html">
+          <li>TOALETTER</li>
+        </a>
+      </ul>
+    </div>
+  </nav>
 
-  <div id="centered">KONSERTER I BERGEN</div>
-</div>
+  <div class="container">
+
+    <img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
+
+    <div id="centered">KONSERTER I BERGEN</div>
   </div>
- </body>
+  </div>
+</body>
+
 </html>
