--- a/toaletter.html
+++ b/toaletter.html
@@ -206,7 +206,7 @@
     <div>
       <form>
         <input type="hurtigSok" id="hurtigSok" placeholder="Skriv inn søkeord">
-        <input type="button" id="hurtigSokKnapp" value="Hurtigsok" /><br>
+        <input type="button" id="hurtigSokKnapp" value="Hurtigsok" onclick="searchToilet()" /><br>
       </form>
     </div>
     <div>
