har fikset noe men glemte hva

--- a/toaletter.html
+++ b/toaletter.html
@@ -219,7 +219,7 @@
         <input type="checkbox" name="gratis" value="gratis">Gratis<br>
         <input name="åpningstider" id="åpningstider" placeholder="Søk åpningstider" /><br>
         <input name="maks_pris" id="maks_pris" placeholder="Maks pris" />
-        <input type="button" id="search" value="søk" />
+        <input type="button" id="search" value="søk" onclick="checkObjectValue()" />
       </form>
     </div>
   </div>
