--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+  <!--Nav-bar som ligger øverst på siden-->
   <ul class="navigation">
     <li id="navitem"><a href="index.html">FORSIDE</a></li>
     <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
     <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
   </ul>
 
+  <!--Nav-bar som opptrer som hamburger-meny når man resizer til mobilstørrelse-->
   <nav id="hamburger">
     <div id="menuToggle">
       <input type="checkbox" />
@@ -34,11 +36,11 @@
       </ul>
     </div>
   </nav>
-
+  <!--Container som holder bilde og overskrift-->
   <div class="container">
-
+    <!--Bildet som dekker siden-->
     <img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
-
+    <!--Overskriften-->
     <div id="centered">KONSERTER I BERGEN</div>
   </div>
   </div>
