Endring css og html
Fjernet duplisering, opprettet flexboxer og endret på visuelle elementer.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Forside</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/common.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
@@ -38,9 +38,9 @@
   </nav>
   <!--Container som holder bilde og overskrift-->
   <div class="container">
-    <!--Bildet som dekker siden-->
-    <img src="img/konsert.jpg" id="bakgrunn" alt="Bergen" style="width:100%; heigth: 100%;">
-    <!--Overskriften-->
+    <!--Bakgrunn-->
+    <img src="media/bakgrunn.jpg" id="bg" alt="Bergen">
+    <!--Overskrift-->
     <div id="centered">KONSERTER I BERGEN</div>
   </div>
   </div>
