--- a/konserter.html
+++ b/konserter.html
@@ -6,64 +6,63 @@
   <link rel="stylesheet" type="text/css" href="css/common.css">
   <link rel="stylesheet" type="text/css" href="css/konserter.css">
 </head>
-  <body>
-    <ul class="navigation">
+<body>
+<ul class="navigation">
      <li id="navitem"><a href="index.html">FORSIDE</a></li>
      <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
      <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
-   </ul>
+</ul>
 
-   <nav id="hamburger">
-     <div id="menuToggle">
-       <input type="checkbox" />
-       <span></span>
-       <span></span>
-       <span></span>
-        <ul id="menu">
-          <a href="index.html"><li>FORSIDE</li></a>
-          <a href="konserter.html"><li>KONSERTER</li></a>
-          <a href="toaletter.html"><li>TOALETTER</li></a>
-        </ul>
-      </div>
-    </nav>
-    <!--Container som holder bilde og tekst-->
-    <div class="container">
-      <!--Klasse som representer første bildet m/konsertinfo-->
-      <div class="bilder">
-        <div class="konsert"><img src="img/konsertbilde1.jpg" />
-          <h1>Execration</h1>
-          <p>Garage, 17. mai 2018. Billetter 250,-</p>
-        </div>
-        <!--Samme som forrige klasse, osv. nedover...-->
-        <div class="konsert"><img src="img/konsertbilde2.jpg" />
-          <h1>Natalie Sandtorv</h1>
-          <p>Landmark, 20. mai 2018. Billetter 300,- </p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde3.jpg" />
-          <h1>Dårlig Vane</h1>
-          <p>Torgallmenningen, 23. mai 2018. Billetter 150,- </p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde4.jpg" />
-          <h1>Lumikide</h1>
-          <p>Hulen, 24. mai 2018. Billetter 180,- </p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde5.jpg" />
-          <h1>Halie</h1>
-          <p>USF Verftet Røkeriet, 25. mai 2018. Billetter 400,-</p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde6.jpg" />
-          <h1>Strange Hellos</h1>
-          <p>USF Verftet Røkeriet, 26. mai 2018. Billetter 800,-</p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde7.jpg" />
-          <h1>Silja Sol</h1>
-          <p>USF Verftet Røkeriet, 27. mai 2018. Billetter 980,- </p>
-        </div>
-        <div class="konsert"><img src="img/konsertbilde8.jpg" />
-          <h1>Ghost</h1>
-          <p>Koengen, 30. mai 2018. Billetter 1180,-</p>
-        </div>
-      </div>
-    </div>
-  </body>
+<nav id="hamburger">
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
+    <ul id="menu">
+      <a href="index.html"><li>FORSIDE</li></a>
+      <a href="konserter.html"><li>KONSERTER</li></a>
+      <a href="toaletter.html"><li>TOALETTER</li></a>
+    </ul>
+</div>
+</nav>
+
+<div class="overskrift"><h1>KOMMENDE KONSERTER</h1></div>
+
+<div class="container">
+  <div class="bilder">
+    <div class="konsert"><img src="media/konsertbilde1.jpg" />
+    <h1>Execration</h1>
+    <p>Garage, 17. mai 2018. Billetter 250,-</p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde2.jpg" />
+    <h1>Natalie Sandtorv</h1>
+    <p>Landmark, 20. mai 2018. Billetter 300,- </p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde3.jpg" />
+    <h1>Dårlig Vane</h1>
+    <p>Torgallmenningen, 23. mai 2018. Billetter 150,- </p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde4.jpg" />
+    <h1>Lumikide</h1>
+    <p>Hulen, 24. mai 2018. Billetter 180,- </p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde5.jpg" />
+    <h1>Halie</h1>
+    <p>USF Verftet Røkeriet, 25. mai 2018. Billetter 400,-</p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde6.jpg" />
+    <h1>Strange Hellos</h1>
+    <p>USF Verftet Røkeriet, 26. mai 2018. Billetter 800,-</p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde7.jpg" />
+    <h1>Silja Sol</h1>
+    <p>USF Verftet Røkeriet, 27. mai 2018. Billetter 980,- </p>
+  </div>
+  <div class="konsert"><img src="media/konsertbilde8.jpg" />
+    <h1>Ghost</h1>
+    <p>Koengen, 30. mai 2018. Billetter 1180,-</p>
+</div>
+</div>
+</body>
 </html>
