--- a/toaletter.html
+++ b/toaletter.html
@@ -11,7 +11,7 @@
 
 </head>
 <!--Henter data fra JSON-->
-<body onload="parseJson()">
+<body onload="requestURL("https://hotell.difi.no/api/json/bergen/dokart")">
 
   <ul class="navigation">
     <li id="navitem"><a href="index.html">FORSIDE</a></li>
