bruker global var for å representere url'er istedenfor

--- a/toaletter.html
+++ b/toaletter.html
@@ -11,7 +11,7 @@
 
 </head>
 <!--Henter data fra JSON-->
-<body onload="requestURL("https://hotell.difi.no/api/json/bergen/dokart")">
+<body onload="requestURL(dokart)">
 
   <ul class="navigation">
     <li id="navitem"><a href="index.html">FORSIDE</a></li>
