--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/common.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script type="text/javascript" href="js/script.js"></script>
 </head>
 
 <body>
