--- a/toaletter.html
+++ b/toaletter.html
@@ -41,7 +41,7 @@
   <!--Wrapper som holder alle div-elementer under nav-baren-->
   <div class="wrapper">
   <!--Søke-funksjonen over toaletter-->
-  <div id="searchForm">>
+  <div id="searchForm">
     <div>
       <form>
         <input type="hurtigSok" id="hurtigSok" placeholder="Skriv inn søkeord">
@@ -223,7 +223,7 @@
   </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBuVLxQGcWI91xujnPjh1NsfEDLK6X-jU&callback=initMap">
   </script>
-  <div id="searchForm">>
+  <div id="searchForm">
     <div>
       <form>
         <input type="hurtigSok" id="hurtigSok" placeholder="Skriv inn søkeord">
