--- a/toaletter.html
+++ b/toaletter.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/toaletter.css">
   <link rel="stylesheet" type="text/css" href="css/common.css">
-  <link rel="javascript" type="text/javascript" href="js/script.js">
+  <script src="js/script.js"></script>
   <title>Toaletter</title>
 
 </head>
