--- a/lekeplasser.html
+++ b/lekeplasser.html
@@ -1,1 +1,7 @@
-<body onload="requestURL(lekeplasser)">
+<!DOCTYPE HTML>
+<html>
+  <head>
+  </head>
+  <body onload="requestURL(lekeplasser)">
+  </body>
+</html>
