--- a/toaletter.html
+++ b/toaletter.html
@@ -204,15 +204,15 @@
           }
         ]
       });
-      for (var i = 0; i < globalEntries.length; i++) {
+      for (var i = 0; i < globalEntries[0].length; i++) {
         var label = i + 1;
         var marker = new google.maps.Marker({
           position: {
-            lat: parseFloat(globalEntries[i]["latitude"]),
-            lng: parseFloat(globalEntries[i]["longitude"])
+            lat: parseFloat(globalEntries[0][i].latitude),
+            lng: parseFloat(globalEntries[0][i].longitude)
           },
           map: map,
-          title: globalEntries[i]["plassering"],
+          title: globalEntries[0][i].plassering,
           label: label.toString()
         });
       }
