--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li id="navitem"><a href="index.html">FORSIDE</a></li>
     <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
     <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
+    <li id="navitem"><a href="favoritt-toalett.html">FAVORITT-TOALETT</a></li>
   </ul>
 
   <!--Nav-bar som opptrer som hamburger-meny når man resizer til mobilstørrelse-->
