--- a/konserter.html
+++ b/konserter.html
@@ -11,6 +11,7 @@
      <li id="navitem"><a href="index.html">FORSIDE</a></li>
      <li id="navitem"><a href="konserter.html">KONSERTER</a></li>
      <li id="navitem"><a href="toaletter.html">TOALETTER</a></li>
+     <li id="navitem"><a href="favoritt-toalett.html">FAVORITT-TOALETT</a></li>
 </ul>
 
 <nav id="hamburger">
