--- a/toaletter.html
+++ b/toaletter.html
@@ -205,7 +205,7 @@
           }
         ]
       });
-      for (var i = 0; i < globalEntries[0].length; i++) {
+      for (var i = 0; i < globalEntries.length; i++) {
         var label = i + 1;
         var marker = new google.maps.Marker({
           position: {
