--- a/favoritt-toalett.html
+++ b/favoritt-toalett.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
 
-  <div id="dassvelger"></div>
+  <div id="doVelger"></div>
 
   <p id="nærmesteLekeplass"></p>
 
@@ -57,7 +57,7 @@
       console.log('doData', entries);
 
       var selector = createSelector(entries);
-      var wrapper = document.getElementById('dassvelger');
+      var wrapper = document.getElementById('doVelger');
       wrapper.appendChild(selector);
 
       selector.onchange = function (event) {
