--- a/toaletter.html
+++ b/toaletter.html
@@ -205,7 +205,7 @@
           }
         ]
       });
-      for (var i = 0; i < globalEntries.length; i++) {
+      for (var i = 0; i < globalEntries[0].length; i++) {
         var label = i + 1;
         var marker = new google.maps.Marker({
           position: {
@@ -223,7 +223,7 @@
   </script>
   <div id="searchForm">
     <div>
-      <form>
+      <form onload="searchToilet()">
         <input type="hurtigSok" id="hurtigSok" placeholder="Skriv inn søkeord">
         <input type="button" id="hurtigSokKnapp" value="Hurtigsok" onclick="searchToilet()" /><br>
       </form>
