--- a/uiblocations.html
+++ b/uiblocations.html
@@ -1,10 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
-<body>
+<body onload="requestURL(uibLocations)">
+  <form>
+    Hvilken måte vil du sortere listen på?
+    <select id="arraySelect">
+      <option value="Alfabetisk">
+      <option value="Revers">
+    </select>
+    <button onclick="arraySort()">
+    </button>
+  </form>
   <div>
-    <ol id="uiblist">
+    <ol id="listofItems">
     </ol>
   </div>
 </body>
