mer fiksing av oppgave 10

--- a/uiblocations.html
+++ b/uiblocations.html
@@ -8,11 +8,10 @@
   <form>
     Hvilken måte vil du sortere listen på?
     <select id="arraySelect">
-      <option value="Alfabetisk">
-      <option value="Revers">
+      <option value="Alfabetisk">Alfabetisk</option>
+      <option value="Revers">Revers</option>
     </select>
-    <button onclick="arraySort()">
-    </button>
+    <button onclick="arraySort()">Sorter</button>
   </form>
   <div>
     <ol id="listofItems">
